--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+/* Navbar */
 .login-button {
   display: flex;
   justify-content: flex-end;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
   margin: 10px 20px 0 0;
   cursor: pointer;
 }
-.login-icon{
+.login-icon {
   margin: 5px;
 }
 .logo {
@@ -18,6 +22,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  margin: 0 100px;
 }
 .menu-list {
   display: flex;
@@ -27,20 +32,72 @@
 .menu-list li {
   font-weight: bold;
   font-size: 1.2rem;
-  padding: 0 20px 0 20px;
+  margin: 10px 20px;
+}
+
+/* Login */
+.login-container {
+  border: 2px solid #ccc;
+  padding: 30px;
+  border-radius: 3%;
+}
+
+/* ProductAll */
+.search-container {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
 }
 .search-area {
-  position: absolute;
-  right: 120px;
+  width: 250px;
+  margin: 30px 60px;
   padding-bottom: 5px;
   border-bottom: 2px solid black;
 }
 
 .search-area .input {
-  width: 100px;
+  width: 200px;
   border: none;
   font-size: 0.9rem;
   margin-left: 5px;
+}
+
+/* ProductCard */
+.product-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+  margin: 20px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.product-card div {
+  margin: 3px 0;
+}
+.product-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.product-card img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.product-card-title {
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.product-card-price {
+  color: #666;
+  margin-top: 0.5rem;
 }
 
 .product-card img {
@@ -55,6 +112,7 @@
   opacity: 0.9;
 }
 
+/* ProductDetail */
 .product-detail-container {
   padding: 2rem;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -62,35 +120,30 @@
 
 .product-image {
   max-width: 100%;
-  height: auto;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .product-info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .product-title {
   color: #333;
   font-size: 2rem;
   font-weight: bold;
-  margin-bottom: 1rem;
+  margin-bottom: 30px;
 }
 
 .product-price {
   color: #666;
   font-size: 1.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 40px;
 }
 
 .product-details {
   color: #888;
   font-size: 1.2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 40px;
 }
 
 .product-button {
@@ -107,55 +160,33 @@
   background-color: #555;
 }
 
-.container {
-  padding-top: 2rem; 
+@media screen and (max-width: 1400px) {
+  .product-card {
+    margin: 10px;
+  }
 }
 
-.product-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1); 
-  padding: 1rem;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.product-card:hover {
-  transform: translateY(-5px); 
-  box-shadow: 0 6px 12px rgba(0,0,0,0.2);
-}
-
-.product-card img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 5px; 
-}
-
-.product-card-title {
-  margin-top: 1rem;
-  font-size: 1.2rem;
-  font-weight: bold;
-}
-
-.product-card-price {
-  color: #666;
-  margin-top: 0.5rem;
-}
-
+/* Table Version */
 @media screen and (max-width: 768px) {
+  /* Navbar */
+  .menu-area {
+    margin: 0px;
+  }
+  .menu-list li {
+    font-size: 1rem;
+  }
 
+  /* ProductDetail */
   .product-detail-container {
     padding: 1rem;
   }
 
   .product-title {
-    font-size: 1.5rem; 
+    font-size: 2rem;
   }
 
   .product-price {
-    font-size: 1.2rem; 
+    font-size: 1.5rem;
   }
 
   .product-details {
@@ -165,24 +196,42 @@
 
   .product-button {
     padding: 0.4rem 1rem;
-    font-size: 0.9rem; 
+    font-size: 0.9rem;
   }
 
   .row {
     flex-direction: column;
   }
 
+  /* ProductAll */
+  .search-container {
+    align-items: center;
+  }
+  .search-area {
+    width: 80%;
+  }
+
   .product-image {
     width: 100%;
-    max-width: 100%; 
+    max-width: 100%;
     height: auto;
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
   }
   .row {
-    gap: 0.5rem;
+    gap: 2rem;
   }
 
   .product-card {
     padding: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  /* Navbar */
+  .menu-area {
+    margin: 0px;
+  }
+  .menu-list li {
+    font-size: 0.9rem;
   }
 }
